--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Locanza faq ondernemer</title>
   <link href="https://fonts.googleapis.com/css?family=Dosis:400,500,600,700%7COpen+Sans:400,600,700" rel="stylesheet">
-	<link rel="stylesheet" href="assets/vendor/strokegap/style.css">
-	<link rel="stylesheet" href="assets/vendor/font-awesome/css/font-awesome.min.css">
-	<link rel="stylesheet" href="assets/vendor/linearicons/style.css">
+  <link rel="stylesheet" href="assets/vendor/strokegap/style.css">
+  <link rel="stylesheet" href="assets/vendor/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="assets/vendor/linearicons/style.css">
   <link rel="stylesheet" href="assets/css/bundle.css">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -17,10 +17,7 @@
   <div class="container">
     <div class="row">
     	<div class="col-12 text-center text-white">
-    		<h1>
-    			Meest gestelde vragen
-    		</h1>
-    </div> <!-- END row-->
+    	<h1>Meest gestelde vragen</h1></div> <!-- END row-->
   </div> <!-- END container-->
 </section> <!-- END intro-hero-->
 
