--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 
               Voordat u LOCA cerdits wilt kopen. Moet je jouw  mobiel instellen voor de App store van Apple of Google Play store app. Om dit in te stellen verwijzen wij naar de support website van Apple of Google.
 
-	<a href="https://support.google.com/googleplay/answer/3423011?co=GENIE.Platform%3DAndroid&hl=nl">Google Play opwaarderen</a>
+              Google Play opwaarderen
+              https://support.google.com/googleplay/answer/3423011?co=GENIE.Platform%3DAndroid&hl=nl
               
 
               Apple store opwaarderen:
