--- a/index.html
+++ b/index.html
@@ -54,10 +54,11 @@
               Stap 1:
               Klik rechtsonder op de boodschappen mandje button [KOOP]
               <br/><br/>
-              Stap 2:
+              <h4 style="" class="u-w-50 u-h-50 bg-primary rounded-circle-step u-flex-center text-white box-shadow-primary u-mb-20"> 02 </h4>
               In het 'Koop' scherm kun je drie keuzes selecteren om Loca credits te kopen, Starter, Basic en Professional. Maak je keuze en klik op de button [KOOP]. Een pop-up scherm verschijnt met het aantal LOCA credits die je hebt gekozen. Klik op [NEE] om de koop af te breken. Klik op [JA] om de koop af te rekenen.
               <br/><br/>
               Locanza! je hebt jouw eerste LOCA credits opgewaardeerd :)
+              
 
             </div>
 					</div>
@@ -127,40 +128,40 @@
 						<div class="accordion__text">
               Geef persoonlijke cadeautjes waardoor nieuwe klanten vaste klanten worden.
               Onderzoek heeft uitgewezen dat een nieuwe klant pas na een aantal koopbelevingen een vaste klant wordt. Als ondernemer kun je dit stimuleren door de klant bij de eerste betaalde bezoeken een klein kadootje te geven. Het geven van een persoonlijk kadootje is tevens een mooie gelegenheid om de klant bekend te maken met het assortiment van jouw winkel. Een kadootje kan door de klant bij het volgende betaalde bezoek worden ingewisseld.
-
+              <br/><br/>
               Geef met het doel om meer omzet te krijgen.
               Korting kan voor de klant een signaal zijn dat de ‘normale’ prijs wellicht te hoog is. Besluit je als ondernemer om jouw klant iets te geven via een persoonlijk kadootje of kado promotie, zorg er dan voor dat hierdoor jouw klant bereid is om meer bij jou te kopen. Zo ontstaat er een mooie win/win tussen ondernemer en consument.
-
+              <br/><br/>
               Stap 1:
               Klik op de button [PROMOTEN], het scherm 'Promoot' verschijnt.
-
+              <br/><br/>
               Stap 2:
               Type een [PROMOTIE TITEL] in. Bedenk een kort maar duidelijk titel.
-
+              <br/><br/>
               Stap 3:
               In het gedeelte van [PROMOTIE TEKST] schrijf je hierin een kort en krachtig promotie tekst dat past bij het product dat je gaat promoten.
-
+              <br/><br/>
               Stap 4:
               Klik op de button met het [CAMERA] logo. De camera wordt geopend.
-
+              <br/><br/>
               Stap 5:
               Klik op de cirkelvormig button, onderin het midden. Voor het maken van een foto van jouw product.
               Je hebt de mogelijkheid om de camera te beëindigen door linksboven op het kruisje te klikken.
               Het is ook mogelijk om de selfie camera stand te gebruiken. Klik linksonder op de [OMDRAAIEN] button.
-
+              <br/><br/>
               Stap 6:
               Je hebt nu ook de mogelijkheid om de promotie als een cadeautje te promoten naar al je fans. Klik voor het delen op symbool [KADO]. De button verandert in de kleur geel. Wil je de promotie toch niet als een kadootje geven, klik je nog een keer op de kadootje symbool. De gele button veranderd weer in het zwart.
-
+              <br/><br/>
               Stap 8:
               Klik op de button [DEEL] om jouw gemaakte promotie te delen met je fans.
               Wil je de promotie onderbreken, klikt je op de button [ANNULEER].
-
+              <br/><br/>
               Stap 9:
               Een pop-up scherm verschijnt dat aangeeft of je de promotie wilt versturen voor 0,45 LOCA, klik op de button [JA] of button [NEE] om de promotie af te breken.
-
+              <br/><br/>
               Stap 10:
               In jouw promotiekanaal verschijnt een rood stipje met een cadeautje erin op de 'promotie belletje' dit geeft aan dat jouw promotie met cadeautje gedeeld is met je fans.
-
+              <br/><br/>
               Locanza! , je hebt een eerste kadootje promotie verzonden naar al je fans :)
             </div>
 					</div>
@@ -196,30 +197,30 @@
 						<div class="accordion__text">
               Spaar punten en kadootje geven.
               Scan de QR-code van jouw fans via de [GEVEN] button en geef zo op eenvoudige wijze spaarpunten en of persoonlijke kadootje aan jouw fans.
-
+              <br/><br/>
               Stap 1:
               Je kunt alleen geven aan een fan, wanneer die eerst fan is van jouw kanaal.
-
+              <br/><br/>
               Stap 2:
               De fan laat zijn QR code zien via [Mijn QR].
-
+              <br/><br/>
               Stap 3:
               Klik in de app op de button [GEVEN]. De camera verschijnt en daarmee scan je de QR code van de fan.
-
+              <br/><br/>
               Stap 4:
               Vul het door de fan afgerekende bedrag in. De te geven spaarpunten worden automatisch door de Locanza app berekend .
-
+              <br/><br/>
               Stap 6:
               Wil je jouw fan een kado geven type dan hier een kado tekst in.
-
+              <br/><br/>
               Stap 7:
               Klik op nu op geven.
-
+              <br/><br/>
               Stap 8:
               Ter bevestiging verschijnt nu pop-up. Voor elke geef actie betaal je 0,0065 LOCA.  Klik op OK. De spaarpunten en kado worden nu toegevoegd aan de spaar balans van de consument.
-
+              <br/><br/>
               Heb je jouw fan ook een kadootje gegeven dan verschijnt er bij het hart icoon op het promotiekanaal van jouw fan een rood balletje. Als jouw fan op dit hartje klikt dan verschijnt de tekst dat het kado bij een volgend betaald bezoek kan worden afgehaald.
-
+              <br/><br/>
               Locanzaaaa! je hebt nu spaarpunten met of zonder een persoonlijk kadootje gegeven aan je fan.
 
             </div>
@@ -238,25 +239,24 @@
               De Locanza app is gericht op meer omzet. Een kado geven gaat dan ook in twee stappen.
               Stap 1: geef via de Locanza app middels een kado teksts aan dat bij een volgend betaald bezoek jouw fan een kadootje krijgt;
               Stap 2: Bij het volgende betaalde bezoek: je geeft het kadootje.
-
-
+              <br/><br/>
               Stap 1:
               Je kunt alleen geven aan een fan, wanneer die eerst fan is van jouw kanaal.
-
+              <br/><br/>
               Stap 2:
               Scan de QR-code van jouw fans via de [GEVEN] button en geef zo op eenvoudige wijze spaarpunten en of persoonlijke kadootje aan jouw fans.
-
+              <br/><br/>
               Stap 3:
               De fan laat zijn QR code zien via [Mijn QR].
-
+              <br/><br/>
               Stap 4:
               Klik in de app op de button [GEVEN]. De camera verschijnt en daarmee scan je de QR code van de fan.
-
+              <br/><br/>
               Stap 5:
               Vul in het scherm wat verschijnt de kado tekst in.
-
+              <br/><br/>
               Stap 6: Klik op Geven en bevestig met OK.
-
+              <br/><br/>
               Bij jouw fan verschijnt nu een rood bolletje in de app bij bij het hart icoon op het promotiekanaal. Door te klikken op het hart icoon verschijnt de kado tekst. Dit kado kan na een volgend betaald bezoek aan de fan worden gegeven.
 
 
