--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               https://support.apple.com/nl-nl/HT202631
               <br/><br/>
               Instructie voor het opwaarderen LOCA balans:
-              Stap 1:
+              <h4 style="" class="u-w-50 u-h-50 bg-primary rounded-circle-step u-flex-center text-white box-shadow-primary u-mb-20"> 01 </h4>
               Klik rechtsonder op de boodschappen mandje button [KOOP]
               <br/><br/>
               <h4 style="" class="u-w-50 u-h-50 bg-primary rounded-circle-step u-flex-center text-white box-shadow-primary u-mb-20"> 02 </h4>
@@ -81,7 +81,7 @@
               Toets een [PROMOTIE TITEL] in.
               <br/><br/>
               Stap 3:
-              IToets een [PROMOTIE TEKST] waardoor klanten naar jouw winkel komen.
+              Toets een [PROMOTIE TEKST] waardoor klanten naar jouw winkel komen.
               <br/><br/>
               Maak een foto met je camera:
               <br/><br/>
