--- a/index.html
+++ b/index.html
@@ -51,12 +51,14 @@
               https://support.apple.com/nl-nl/HT202631
               <br/><br/>
               Instructie voor het opwaarderen LOCA balans:
+              <div>
               <h4 style="" class="u-w-50 u-h-50 bg-primary rounded-circle-step u-flex-center text-white box-shadow-primary u-mb-20"> 01 </h4>
               Klik rechtsonder op de boodschappen mandje button [KOOP]
-              <br/><br/>
+              </div>
+              <div>
               <h4 style="" class="u-w-50 u-h-50 bg-primary rounded-circle-step u-flex-center text-white box-shadow-primary u-mb-20"> 02 </h4>
               In het 'Koop' scherm kun je drie keuzes selecteren om Loca credits te kopen, Starter, Basic en Professional. Maak je keuze en klik op de button [KOOP]. Een pop-up scherm verschijnt met het aantal LOCA credits die je hebt gekozen. Klik op [NEE] om de koop af te breken. Klik op [JA] om de koop af te rekenen.
-              <br/><br/>
+              </div>
               Locanza! je hebt jouw eerste LOCA credits opgewaardeerd :)
               
 
