--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
    <div class="row">
    	<div class="col-12 mt-4">
 			<div id="accordion" role="tablist" class="bg-white box-shadow-v3">
-
 				<div class="accordion__faq">
 					<a class="accordion__title p-4" data-toggle="collapse" href="#acc1">
 						<i class="fa fa-angle-down mr-3"></i>
@@ -44,24 +43,17 @@
               <br/><br/>
               Voordat u LOCA cerdits wilt kopen. Moet je jouw  mobiel instellen voor de App store van Apple of Google Play store app. Om dit in te stellen verwijzen wij naar de support website van Apple of Google.
               <br/><br/>
-              Google Play opwaarderen
-              https://support.google.com/googleplay/answer/3423011?co=GENIE.Platform%3DAndroid&hl=nl
-              <br/><br/>              
-              Apple store opwaarderen:
-              https://support.apple.com/nl-nl/HT202631
+              <a href="https://support.google.com/googleplay/answer/3423011?co=GENIE.Platform%3DAndroid&hl=nl" >Google Play opwaarderen</a>
+              <br/><br/>
+              <a href="https://support.apple.com/nl-nl/HT202631">Apple store opwaarderen
               <br/><br/>
               Instructie voor het opwaarderen LOCA balans:
-              <div>
-              <h4 style="" class="u-w-50 u-h-50 bg-primary rounded-circle-step u-flex-center text-white box-shadow-primary u-mb-20"> 01 </h4>
+              <br/><br/>
               Klik rechtsonder op de boodschappen mandje button [KOOP]
-              </div>
-              <div>
-              <h4 style="" class="u-w-50 u-h-50 bg-primary rounded-circle-step u-flex-center text-white box-shadow-primary u-mb-20"> 02 </h4>
+              <br/><br/>
               In het 'Koop' scherm kun je drie keuzes selecteren om Loca credits te kopen, Starter, Basic en Professional. Maak je keuze en klik op de button [KOOP]. Een pop-up scherm verschijnt met het aantal LOCA credits die je hebt gekozen. Klik op [NEE] om de koop af te breken. Klik op [JA] om de koop af te rekenen.
-              </div>
+              <br/><br/>
               Locanza! je hebt jouw eerste LOCA credits opgewaardeerd :)
-              
-
             </div>
 					</div>
 				</div>	 <!-- END accordion__faq-->
@@ -177,13 +169,13 @@
 					<div id="acc4" class="collapse" role="tabpanel" data-parent="#accordion">
 						<div class="accordion__text">
               Het kan zijn dat je niet tevreden bent met de door jouw verstuurde promotie. Je kunt de promotie dan simpel verwijderen. De promotie wordt dan verwijderd bij fans die jouw promotie nog niet hebben bekeken.
-
+              <br/><br/>
               Stap 1:
               Klik in jouw  promotie kanaal op het belletje [PROMOTIE]. Jouw gemaakte promotie verschijnt in beeld.
-
+              <br/><br/>
               Stap 2:
               Klik links onder op het prullenbak icoon.  Een pop-up scherm verschijnt.
-
+              <br/><br/>
               Stap 3:
               Wil je jouw promotie verwijderen klikdan  op de button [JA]. , klik op de button [NEE] als je de promotie niet wilt verwijderen.
             </div>
@@ -274,37 +266,37 @@
 					<div id="acc7" class="collapse" role="tabpanel" data-parent="#accordion">
 						<div class="accordion__text">
               Een fan kan een door jou gegeven kadootje na een volgend betaald bezoek ophalen.
-
+              <br/><br/>
               Stap 1:
               Via het hart icoon op het promotiekanaal kan jouw fan laten zien welk kado hij heeft gekregen bij een volgend betaald bezoek.
-
+              <br/><br/>
               Stap 2:
               De fan laat zijn QR code zien via [MIJN QR].
-
+              <br/><br/>
               Stap 3:
-               Klik op de button [GEVEN].
-
+              Klik op de button [GEVEN].
+              <br/><br/>
               Stap 5:
               Scan de QR code van de fan.
-
+              <br/><br/>
               Stap 6:
               Gebruik je een spaarsysteem via Locanza dan verschijnt het schermpje 'Spaarpunten geven'. Vul onder [BEDRAG] het bedrag in van de nieuwe aankoop door jouw fan.
-
+              <br/><br/>
               Gebruik je geen spaarsysteem dan verschijnt alleen een tekstveld.
-
+              <br/><br/>
               Stap 7:
               Laast het tekstveld  'LEEG' .
-
+              <br/><br/>
               Stap 8:
               Klik nu op de button [GEEF].
               Er verschijnt een mededeling of je de spaarpunten/kado wilt geven en klik op  [JA].
-
+              <br/><br/>
               Stap 9:
-
+              <br/><br/>
               Doordat je het tekstveld leeg laat wordt de kado tekst bij de fan verwijderd.
-
+              <br/><br/>
               Check op de app van jouw fan of het rode symbooltje met een kadootje nu weg is. Je kunt dit extra controleren om op het hartje te klikken. In het volgende scherm verschijnt de tekst dat er geen kado aanwezig is.
-
+              <br/><br/>
               Locanza! Je hebt nu een fan extra blij gemaakt met een mooi kado!
             </div>
 					</div>
