--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <br/><br/>
               <a href="https://support.google.com/googleplay/answer/3423011?co=GENIE.Platform%3DAndroid&hl=nl" >Google Play opwaarderen</a>
               <br/><br/>
-              <a href="https://support.apple.com/nl-nl/HT202631">Apple store opwaarderen
+              <a href="https://support.apple.com/nl-nl/HT202631">Apple store opwaarderen</a>
               <br/><br/>
               Instructie voor het opwaarderen LOCA balans:
               <br/><br/>
